--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uploadcare/blocks": "0.36.0",
+    "@uploadcare/react-widget": "^2.4.5",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "react": "^18.2.0",
