--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@uploadcare/react-widget": "^2.4.5",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
+    "http-proxy-middleware": "^3.0.0",
     "react": "^18.2.0",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
